deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-app
  namespace: form-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form-app
  template:
    metadata:
      labels:
        app: form-app
    spec:
      containers:
        - name: form-app
          image: fcavarzare/form-app:803d936a932576f7b09f4801cb23e7edfbe27540
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
