deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: form-app
  namespace: form-app-dev
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - form-app-dev.local
    secretName: form-app-dev-tls
  rules:
  - host: form-app-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: form-app
            port:
              number: 80
