deploy/dev/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana-dev.local
    - prometheus-dev.local
    secretName: monitoring-dev-tls
  rules:
  - host: grafana-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-grafana
            port:
              number: 80
  - host: prometheus-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-kube-prometheus-stack-prometheus
            port:
              number: 9090
